fixed links in nav menu overflowing, made shorther urls

--- a/src/components/LinksBlock/links-block.module.scss
+++ b/src/components/LinksBlock/links-block.module.scss
@@ -33,6 +33,7 @@
     justify-content: flex-start;
     align-items: center;
     width:max-content;
+    max-width: 100%;
     font-size:1.4375rem;
     font-weight:800;
     margin-bottom: 10px;
